--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,13 +1,20 @@
 @import '@fortawesome/fontawesome-free/css/all.css';
+@import 'primeicons/primeicons.css';
+
+#app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 body {
   font-family: 'Arial', sans-serif;
-  background-color: #1e1e2f;
+  background-color: #1b1b1b;
   color: #fff;
   margin: 0;
-  padding: 20px;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
 }
