--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,11 +1,18 @@
 @import '@fortawesome/fontawesome-free/css/all.css';
 @import 'primeicons/primeicons.css';
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 #app {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  height: 100%;
+  width: 100%;
 }
 
 body {
